# video-ai-platform

./: .env  .env.example  .gitignore  CHECKLIST.md  CHECKLIST.md.bak  README.md  auth_manager.py  cache_manager.py  cleanup.sh  cors_config.json  distributed_circuit_breaker.py  example.py  example_advanced.py  example_distributed.py  metrics_collector.py  monitoring.py  pyproject.toml  pytest.ini  reorganize.sh  requirements-dev.txt  requirements.txt  resource_monitor.py  retry.py  retry_configs.py  secure_video_processor.py  security_headers.py  setup.py  terminal  update_imports.sh  websocket_message_processor.py  websocket_server.py
.github/: CODEOWNERS  branch-protection.yml  dependabot.yml
config/: .env.example  README.md  config.base.yaml  config.dev.yaml  config.prod.yaml  config.staging.yaml  config.template.json  config_manager.py  examples.py  rag_config.yaml
docs/: CHECKLIST.md  COMPRESSION.md  INSTALL.md  README.md  api.rst  cli.rst  compression.rst  conf.py  developer_guide.rst  index.rst  mkdocs.yml  requirements-docs.txt  requirements.txt
examples/: adaptive_compression_example.py  compression_example.py  compression_profiles.json  cors_example.py  example.py  example_advanced.py  ffmpeg_compression_example.py  integrated_example.py  logging_example.py  monitoring_dashboard_example.py
instructions/: development_guide.md
scripts/: check_docstrings.py  setup_docs.py
source/: conf.py  index.rst
src/: __init__.py  cli.py  compression.py  cors_config.json  cors_config.py  cuthrough.py  example.py  exceptions.py  main.py  video_processor.py
(+249 files in other folders)
